--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "yelp-camp",
+  "name": "city-select",
   "version": "1.0.0",
-  "description": "",
+  "engines": {
+    "node": "6.11.2",
+    "npm": "5.6.0"
+  },
+  "description": "A city review site that helps users better plan their next vacation or move.",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
